[gd_scene load_steps=5 format=2]

[ext_resource path="res://Control/Missions/notification_ninepatch.png" type="Texture" id=1]
[ext_resource path="res://Fonts/type_writer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Control/Missions/Notification.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[node name="Notification" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 51.0
margin_bottom = 15.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 45.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.227451, 0.258824, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[node name="Delay" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true
[connection signal="resized" from="Label" to="." method="_on_Label_resized"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
